--- a/codes/lect_021RTDimpulse.ipynb
+++ b/codes/lect_021RTDimpulse.ipynb
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "E = c/-trapezoid(t, c) \n",
+    "E = c/trapezoid(c, t) \n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "ax.plot(t, E, lw=2, marker='o')\n",
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "tmean = -trapezoid(t,t*E)\n",
+    "tmean = trapezoid(t*E, t)\n",
     "\n",
     "print('El tiempo medio de residencia es igual a %.3f s' % tmean) "
    ]
