--- a/codes/lect_031RTDstep.ipynb
+++ b/codes/lect_031RTDstep.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import trapezoid"
    ]
   },
   {
@@ -153,7 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_forward = [(F[i+1] - F[i]) / (t[i+1] - t[i]) for i in range(0, len(F)-1)]"
+    "E_forward = [(F[i+1] - F[i]) / (t[i+1] - t[i]) for i in range(0, len(F)-1)]\n",
+    "\n",
+    "# Numpy has a built-function which performs this calculation. np.diff"
    ]
   },
   {
@@ -214,9 +217,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa62c3cb",
+   "metadata": {},
+   "source": [
+    "# Calculating the first and second moments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "712f910b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El tiempo medio de residencia (forward) es igual a 30.675 min\n",
+      "El tiempo medio de residencia (backward) es igual a 57.537 min\n",
+      "El tiempo medio de residencia (central) es igual a 39.650 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmean_forward = trapezoid(t[0:-1]* E_forward, t[0:-1]) \n",
+    "tmean_backward = trapezoid(t[1:]* E_backward, t[1:]) \n",
+    "tmean_central = trapezoid(t[1:-1]* E_central, t[1:-1]) \n",
+    "\n",
+    " \n",
+    "print('El tiempo medio de residencia (forward) es igual a {:1.3f} min'.format(tmean_forward))\n",
+    "print('El tiempo medio de residencia (backward) es igual a {:1.3f} min'.format(tmean_backward))\n",
+    "print('El tiempo medio de residencia (central) es igual a {:1.3f} min'.format(tmean_central))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "00a0027a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La varianza es igual a 648.919 min^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "variance = trapezoid(t[0:-1]**2*E_forward, t[0:-1]) - tmean_forward**2\n",
+    "print('La varianza es igual a {:1.3f} min^2'.format(variance))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be019c5",
+   "id": "f4948758",
    "metadata": {},
    "outputs": [],
    "source": []
